# yyds-pip-audit

./: .gitignore  LICENSE  README.md  README_CN.md  build.sh  pyproject.toml  setup.py
example/demo_project/: db.py  main.py  requirements.txt  utils.py
tests/: test_audit.py
yyds_pip_audit/: __init__.py  __version__.py  audit.py  cli.py
