[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yyds-pip-audit"
dynamic = ["version"]
description = "A robust Python package import dependency auditor and PyPI mapper."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "yyds-fast", email = "yyds.fast@gmail.com" },
]
keywords = ["dependencies", "imports", "pip", "requirements", "audit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.0",
    "packaging>=23.0",
    "pathspec>=0.12.1",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
build = ["build>=0.10", "twine>=4.0"]
lint = ["ruff>=0.12"]

[project.urls]
Homepage = "https://github.com/yyds-fast/yyds-pip-audit"
Repository = "https://github.com/yyds-fast/yyds-pip-audit"
Issues = "https://github.com/yyds-fast/yyds-pip-audit/issues"

[project.scripts]
yyds-pip-audit = "yyds_pip_audit.cli:main"
yyds_pip_audit = "yyds_pip_audit.cli:main"

[tool.setuptools.dynamic]
version = { attr = "yyds_pip_audit.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["yyds_pip_audit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.yyds-pip-audit]
exclude = ["tests", "example"]

[tool.coverage.run]
source = ["yyds_pip_audit"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]
ignore = ["E501"]
